Change the name of the click button

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <p>We'll suggest you a dish that you will love!</p>
                     <button id="surprise-btn" class="recommend-btn">
                         <i class="fas fa-magic"></i>
-                        Surprise Me!
+                        Click me!
                     </button>
                 </div>
             </div>
