Remove try again and order button

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
 
             <!-- Surprise Me Interface -->
-            <div id="surprise-me-section" class="preference-section hidden">
+            <div id="surprise-me-section" class="preference-section">
                 <div class="section-header">
                     <button class="back-btn hidden" onclick="showMainMenu()">
                         <i class="fas fa-arrow-left"></i>
@@ -253,16 +253,6 @@
                     </div>
                 </div>
                 
-                <div class="action-buttons">
-                    <button id="try-again-btn" class="secondary-btn">
-                        <i class="fas fa-redo"></i>
-                        Try Again
-                    </button>
-                    <button id="order-btn" class="primary-btn">
-                        <i class="fas fa-shopping-cart"></i>
-                        Order This
-                    </button>
-                </div>
             </div>
 
             <!-- Combo Meal Result -->
@@ -292,17 +282,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                
-                <div class="action-buttons">
-                    <button id="combo-try-again-btn" class="secondary-btn">
-                        <i class="fas fa-redo"></i>
-                        Try Again
-                    </button>
-                    <button id="combo-order-btn" class="primary-btn">
-                        <i class="fas fa-shopping-cart"></i>
-                        Order This Combo
-                    </button>
                 </div>
             </div>
 
