Add floating button for one meal recommendation

--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
             <!-- Surprise Me Interface -->
             <div id="surprise-me-section" class="preference-section">
                 <div class="section-header">
-                    <button class="back-btn hidden" onclick="showMainMenu()">
+                    <button class="back-btn" onclick="goToFoodMenu()">
                         <i class="fas fa-arrow-left"></i>
-                        Back
+                        Back to Menu
                     </button>
                 </div>
                 
