Completely shift the one time meal generation to floating button

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             </div>
 
             <!-- Surprise Me Interface -->
-            <div id="surprise-me-section" class="preference-section">
+            <div id="surprise-me-section" class="preference-section hidden">
                 <div class="section-header">
                     <button class="back-btn" onclick="goToFoodMenu()">
                         <i class="fas fa-arrow-left"></i>
