Let users select pre-existing food items for their menu

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <div id="food-setup" class="food-setup hidden">
                 <div class="setup-card">
                     <h2>What do you usually eat?</h2>
-                    <p>Add all the food items you regularly eat. We'll create a varied 7-day menu from these.</p>
+                     <p>Select at least 3 items from the list below. You can also add your own.</p>
                     
-                    <div class="food-input-section">
-                        <div class="input-group">
-                            <input type="text" id="food-input" placeholder="Enter a food item (e.g., Dal Rice, Chicken Curry)">
-                            <button id="add-food-btn" class="add-btn">
-                                <i class="fas fa-plus"></i>
-                            </button>
-                        </div>
-                    </div>
+                     <div class="predefined-options" id="predefined-options"></div>
+ 
+                     <div class="food-input-section">
+                         <button id="add-other-btn" class="secondary-btn" type="button">
+                             <i class="fas fa-plus"></i>
+                             Add other item
+                         </button>
+                     </div>
 
                     <div class="added-foods">
                         <h3>Your Food Items:</h3>
