Let users create menu of only one meal as well

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div id="food-setup" class="food-setup hidden">
                 <div class="setup-card">
                     <h2>What do you usually eat?</h2>
-                     <p>Select at least 3 items from the list below. You can also add your own.</p>
+                    <p>Select your usual meals (one or more). You can also add your own.</p>
                     
                      <div class="predefined-options" id="predefined-options"></div>
  
