Add back buttons on menu screens

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <!-- Food Preferences Setup -->
             <div id="food-setup" class="food-setup hidden">
                 <div class="setup-card">
+                 <button id="setup-back-btn" class="back-btn" type="button" style="margin-bottom: 15px;">
+                     <i class="fas fa-arrow-left"></i>
+                     Back
+                 </button>
                     <h2>What do you usually eat?</h2>
                     <p>Select your usual meals (one or more). You can also add your own.</p>
                     
@@ -70,6 +74,10 @@
             <!-- 7-Day Menu Display -->
             <div id="menu-display" class="menu-display hidden">
                 <div class="menu-header">
+                     <button id="menu-back-btn" class="back-btn" type="button">
+                         <i class="fas fa-arrow-left"></i>
+                         Back
+                     </button>
                     <h2>Your 7-Day Menu</h2>
                     <div class="menu-actions">
                         <button id="add-new-food-btn" class="secondary-btn">
